@@ -28,6 +28,7 @@
 
 from webkitpy.steps.abstractstep import AbstractStep
 from webkitpy.steps.options import Options
+from webkitpy.webkit_logging import log
 
 class RunTests(AbstractStep):
     @classmethod
@@ -47,10 +48,14 @@ class RunTests(AbstractStep):
             return
 
         # Run the scripting unit tests first because they're quickest.
+        log("Running Python unit tests")
         self._tool.executive.run_and_throw_if_fail(self.port().run_python_unittests_command())
+        log("Running Perl unit tests")
         self._tool.executive.run_and_throw_if_fail(self.port().run_perl_unittests_command())
-        self._tool.executive.run_and_throw_if_fail(self.port().run_javascriptcore_tests_command())
+        log("Running JavaScriptCore tests")
+        self._tool.executive.run_and_throw_if_fail(self.port().run_javascriptcore_tests_command(), quiet=True)
 
+        log("Running run-webkit-tests")
         args = self.port().run_webkit_tests_command()
         if self._options.non_interactive:
             args.append("--no-launch-safari")
